新增：自动部署任务

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,4 +77,4 @@ jobs:
           # rsync flags（默认值："-rltgoDzvO"）
           # --delete 删除那些目标目录中有而源目录中没有的多余文件
           # --exclude 排除目标目录中那些被该选项指定的文件
-          ARGS: "-rltgoDzvO --delete --exclude '.user.ini'"
+          ARGS: "-rltgoDzvO --delete --exclude '.*'"
