--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 # 工作流名称（默认值：配置文件名）
 name: GitHub Actions Deploy rabbit-client-pc main
 
-# 指定触发 工作流（workflow） 的条件
+# 指定触发 工作流（workflow）的条件
 # 指定触发事件时，可以限定分支或标签
 on:
   # 当触发 push 事件时执行工作流任务
@@ -77,4 +77,4 @@ jobs:
           # rsync flags（默认值："-rltgoDzvO"）
           # --delete 删除那些目标目录中有而源目录中没有的多余文件
           # --exclude 排除目标目录中那些被该选项指定的文件
-          ARGS: "-rltgoDzvO"
+          ARGS: "-rltgoDzvO --delete --exclude '.user.ini'"
