--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,9 +53,9 @@ jobs:
             **/node_modules
           # 用于恢复和保存缓存的显式密钥
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          # 如果键没有发生缓存命中，则用于恢复缓存的键的显式密钥
-          restore-keys: |
-            ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+            # 如果键没有发生缓存命中，则用于恢复缓存的键的显式密钥
+            # restore-keys: |
+          # ${{ runner.os }}-yarn-
 
       # 安装依赖
       - name: Install dependencies 🔧
