--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,14 +38,18 @@ jobs:
           # 需要使用的 node 版本
           node-version: '14'
 
+      # 获取 yarn 的缓存目录路径
+      - name: Get yarn cache directory path 🔗
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
       # 缓存 node_modules
       - name: Cache dependencies 📦
-        uses: actions/cache@v2
+        uses: actions/cache@v2.1.7
         id: yarn-cache
         with:
           # 需要缓存的文件、目录和通配符模式列表
-          path: |
-            **/node_modules
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           # 用于恢复和保存缓存的显式密钥
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           # 如果键没有发生缓存命中，则用于恢复缓存的键的显式密钥
