--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
         with:
-          # 是否在git config 中持久化 token（默认值：true）
+          # 是否在git config 中持久化token（默认值：true）
           persist-credentials: false
 
       # 设置 node 环境变量
@@ -41,26 +41,27 @@ jobs:
       # 缓存 node_modules
       - name: Cache dependencies 📦
         uses: actions/cache@v2
-        id: npm-cache
+        id: yarn-cache
         with:
           # 需要缓存的文件、目录和通配符模式列表
-          path: ~/.npm
+          path: |
+            **/node_modules
           # 用于恢复和保存缓存的显式密钥
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           # 如果键没有发生缓存命中，则用于恢复缓存的键的显式密钥
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-yarn-
 
       # 安装依赖
       - name: Install dependencies 🔧
         # 判断缓存是否命中
-        if: steps.npm-cache.outputs.cache-hit != 'true'
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         # 如果没有命中，则安装依赖
-        run: npm install --frozen-lockfile
+        run: yarn --frozen-lockfile
 
       # 运行构建脚本
       - name: Build ⏳
-        run: npm run build
+        run: yarn build
 
       # 部署到服务器
       - name: Deploy 🚀
