--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vueuse/core": "^6.9.1",
     "babel-eslint": "^10.1.0",
+    "dayjs": "^1.10.7",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
