--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "faker": "^5.5.3",
+    "msw": "^0.35.0",
     "normalize.css": "^8.0.1",
     "vee-validate": "^4.4.11",
     "vue": "^3.0.0",
@@ -36,5 +38,8 @@
     "prettier": "^2.2.1",
     "style-resources-loader": "^1.4.1",
     "vue-cli-plugin-style-resources-loader": "~0.1.5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
